# verdictd

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: pr_basic_compilation_check.yml  pr_verdictd.yml
cmd/verdict/src/: gpg.rs  image.rs  main.rs  opa.rs  resource.rs
docs/design/: design.md  enclave_attestation_architecture_protocol.md
proto/: clientapi.proto
src/: main.rs
src/attestation_agent/: mod.rs  protocol.rs  rats_tls.rs
src/client_api/: annotation.rs  api.rs  gpg.rs  image.rs  key_manager.rs  key_provider.rs  messages.rs  mod.rs  opa.rs  resource.rs
src/crypto/: aes256_cbc.rs  aes256_gcm.rs
src/policy_engine/opa/: libopa.h  opa_engine.rs
src/rats_tls/: ffi.rs  mod.rs
src/resources/: directory_key_manager.rs  directory_keymanager.rs  file.rs  gpg.rs  image.rs  mod.rs  opa.rs  resource.rs
